Minimum intergration with TornadoVM