@@ -1,2 +1,2 @@
-java --add-modules jdk.incubator.vector -jar target/gpu-llama3-1.0-SNAPSHOT.jar --model Llama-3.2-1B-Instruct-Q8_0.gguf --prompt "Tell me a joke"
+java --enable-preview --add-modules jdk.incubator.vector -jar target/gpu-llama3-1.0-SNAPSHOT.jar --model Llama-3.2-1B-Instruct-Q8_0.gguf --prompt "Tell me a joke"
 
